Fix Dark Mode for vertical timeline in object view
Summary:
The vertical timeline uses a hardcoded color. Use the existing variable instead, so it's less dominant in Dark Mode and more similar to the wedge.

Refs T15056

Test Plan:
# Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
# Go to any object like http://phorge.localhost/T1 which has a few actions, look at the vertical line connecting each timeline entry

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26901

--- a/webroot/rsrc/css/phui/phui-timeline-view.css
+++ b/webroot/rsrc/css/phui/phui-timeline-view.css
@@ -4,7 +4,7 @@
 
 .phui-timeline-view {
   padding: 0 16px;
-  background: linear-gradient(to right, #d5d8e1 1px, transparent 1px);
+  background: linear-gradient(to right, {$timeline} 1px, transparent 1px);
   background-position: 96px;
 }
 
